[package]
name = "esp32-config-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
r2r = "0.7.0"
futures = "0.3.28"
tokio = { version = "1.28.1", features = ["full"] }
clap = { version = "4.2.7", features = ["derive"] }
