<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>esp32_config_tool</name>
  <version>0.0.1</version>
  <description>Examples of a minimal r2r node</description>
  <maintainer email="marco.schwarz@stud.unileoben.ac.at">Marco Schwarz</maintainer>
  <license>MIT</license>
  <author>Marco Schwarz</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rcl</build_depend>
  <build_depend>ros2_esp32_interfaces</build_depend>

  <exec_depend>rcl</exec_depend>
  <exec_depend>ros2_esp32_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
